--- a/PortfolioWebsite/ClientApp/src/app/side-navigation/side-navigation.component.less
+++ b/PortfolioWebsite/ClientApp/src/app/side-navigation/side-navigation.component.less
@@ -1,3 +1,5 @@
+@import '../../assets/styles/variables.less';
+
 :host {
   display: flex;
   flex-direction: column;
@@ -12,12 +14,13 @@
 }
 
 #close-menu {
-  font-size: .8em;
+  
   display: flex;
   justify-content: flex-end;
 }
 
 #close-menu h2 {
-              margin: 10px;
-              font-weight:bold;
-            }
+  margin: 20px 10px;
+  font-weight: bold;
+  font-size: 1.2em;
+}
