--- a/PortfolioWebsite/ClientApp/src/styles.less
+++ b/PortfolioWebsite/ClientApp/src/styles.less
@@ -20,7 +20,7 @@ a {
 }
 
 a:hover {
-  animation: fadeWhite .75s;
+  animation: fadeWhite .7s;
   animation-fill-mode: forwards;
 }
 
